{{$NEXT}}

6.066     2024-01-29 15:07:57+01:00 Europe/Berlin

 - Fixed check that disables secondary optimization.
   A corresponding supernet rule is found now, even if networks are
   not identical, but in relation 'subnet in zone'.
 - Removed support for EZVPN at Cisco devices.
 - Syntax of loopback interfaces is checked more thoroughly.
 - Program 'cut-netspoc' now collects "management_instance"
   for routers of type NSX and PAN-OS.

6.065     2023-11-13 11:45:12+01:00 Europe/Berlin

 - Added new command 'export-netspoc-syntax'
   Usage: export-netspoc-syntax FILE|DIR [TYPE:|TYPE:NAME ...]
   This writes selected or all toplevel definitions as JSON to Stdout.
   Each definition is written as JSON object with key value pairs.
   Definitions are grouped by TYPE, accessible with key "TYPE",
   e.g. "service".

6.064     2023-10-04 12:30:29+02:00 Europe/Berlin

 - Fixed attribute "log_deny" for device with multiple VRFs.
   Different values of "log_deny" configured at multiple VRFs are now
   respected.
 - Two separate commands are used now to set security-association
   lifetime for seconds and kilobytes in generated code for ASA and IOS.
   Previously a single command was used, that was split by
   Netspoc-Approve into separate commands.

6.063     2023-09-07 13:58:15+02:00 Europe/Berlin

 - Command 'format-netspoc' now also sorts IPv6 addresses:
   - vip interfaces by IPv6 address
   - hosts by IPv6 address
   - elements of groups by IPv6 address embedded in name,
     where colons of address are repaced by underscore:
     NAME-dddd_dddd_dddd_dddd_dddd_dddd_dddd_dddd
 - Header is no longer written to code files.
   File DEVICE.info is unsed instead.
 - All raw files must be placed in "netspoc/raw/" now.
   Directory "netspoc/raw/ipv6/" is ignored.
 - A warning is shown, if different NAT tags are bound to
   the identical set of interfaces.
   These NAT tags should be merged into single NAT definition.

6.062     2023-08-07 15:25:55+02:00 Europe/Berlin
