@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+ - Hidden NAT may be applied multiple times to the same network now.
+
 6.066     2024-01-29 15:07:57+01:00 Europe/Berlin
 
  - Fixed check that disables secondary optimization.
